--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap Config Example</title>
+  <title>Kawal Media ID</title>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/semantic.min.css">
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="/dist/bundle.js"></script>
+  <!-- <script src="public/bundle.js" type="text/javascript"></script> -->
 </body>
 
 </html>
